@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-07T08:22:43Z",
-  "count_outdated" : 641,
-  "uniques_outdated" : 366,
-  "count" : 669,
+  "timestamp" : "2022-11-08T01:21:57Z",
+  "count_outdated" : 643,
+  "uniques_outdated" : 367,
+  "count" : 670,
   "uniques" : 380,
   "clones" : [
-    {
-      "timestamp": "2022-10-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-25T00:00:00Z",
       "count": 2,
